--- a/.github/workflows/Test&Merge.yml
+++ b/.github/workflows/Test&Merge.yml
@@ -40,8 +40,8 @@ jobs:
 
     - name: Merge to main
       run: |
-        git config --global user.email "actions@github.com"
-        git config --global user.name "GitHub Actions"
+        git config --global user.email "ramibelhadjsalem@gmail.com"
+        git config --global user.name "ramibelhadjsalem"
         git fetch --all
         git checkout main
         git merge ${{ github.event.after }}
