--- a/intershipJenkins.Api/appsettings.json
+++ b/intershipJenkins.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "intershipJenkinsDataBase": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "intership_jenkins"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
