--- a/intershipJenkins.Api/intershipJenkins.Api.csproj
+++ b/intershipJenkins.Api/intershipJenkins.Api.csproj
@@ -14,6 +14,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
- 
+	<ItemGroup>
+		<InternalsVisibleTo Include="intershipJenkins.Integrationtests"/>
+	</ItemGroup>
 
 </Project>
