--- a/intershipJenkins.Api/Properties/launchSettings.json
+++ b/intershipJenkins.Api/Properties/launchSettings.json
@@ -34,8 +34,8 @@
       "environmentVariables": {
         "ASPNETCORE_URLS": "https://+:443;http://+:80"
       },
-      "useSSL": true,
-      "publishAllPorts": true
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
