--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: ramibhs/intership-jenkins:latest
+        image: ramibhs/intership:1.1
         ports:
         - containerPort: 80
 
