--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: ramibhs/intership:1.4
+        image: ramibhs/jenkins:1.5
         ports:
         - containerPort: 80
 
