--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,10 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: myapp-service
+  namespace: myapp
 spec:
+  type: LoadBalancer
   selector:
     app: myapp
   ports:
-  - port: 80
-    protocol: TCP
-    targetPort: 80
+    - port: 80
+      protocol: TCP
+      targetPort: 80
