--- a/.github/workflows/CiPipline.yml
+++ b/.github/workflows/CiPipline.yml
@@ -48,18 +48,30 @@ jobs:
 
     - name: Build Docker image
       run: |
-        docker build -t myapp:${{ github.sha }} .
-        echo "DOCKER_IMAGE=myapp:${{ github.sha }}" >> $GITHUB_ENV
+        docker build -t ramibhs/intership:${{ github.sha }} .
+        echo "DOCKER_IMAGE=ramibhs/intership:${{ github.sha }}" >> $GITHUB_ENV
 
     - name: Log in to Docker Hub
       run: echo ${{ secrets.DOCKER_HUB_PASSWORD }} | docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
 
     - name: Push Docker image to Docker Hub
-      run: docker push myapp:${{ github.sha }}
+      run: docker push ramibhs/intership:${{ github.sha }}
 
-    - name: Update Kubernetes deployment
+    - name: Update Kubernetes deployment YAML
+      run: |
+        sed -i "s|ramibhs/jenkins:.*|ramibhs/intership:${{ github.sha }}|g" k8s/deployment.yaml
+
+    - name: Commit and push updated deployment.yaml
+      run: |
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git add k8s/deployment.yaml
+        git commit -m "Update deployment image to ramibhs/intership:${{ github.sha }}"
+        git push
+
+    - name: Apply Kubernetes deployment
       env:
         KUBECONFIG: ${{ secrets.KUBE_CONFIG_DATA }}
       run: |
         echo "${KUBECONFIG}" | base64 --decode > $HOME/.kube/config
-        kubectl set image deployment/myapp myapp=myapp:${{ github.sha }} -n myapp
+        kubectl apply -f k8s/deployment.yaml -n myapp
