--- a/.github/workflows/CiPipline.yml
+++ b/.github/workflows/CiPipline.yml
@@ -56,3 +56,25 @@ jobs:
       run: |
         echo "${KUBECONFIG}" | base64 --decode > $HOME/.kube/config
         kubectl apply -f k8s/deployment.yaml -n myapp
+        
+    - name: Notify Slack on success
+      if: success()
+      uses: 8398a7/action-slack@v3
+      with:
+        status: success
+        fields: repo,commit,author,commit_message,action,eventName,ref,workflow,job,took
+        author_name: GitHub Actions
+        slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
+      env:
+        CI: true
+
+    - name: Notify Slack on failure
+      if: failure()
+      uses: 8398a7/action-slack@v3
+      with:
+        status: failure
+        fields: repo,commit,author,commit_message,action,eventName,ref,workflow,job,took
+        author_name: GitHub Actions
+        slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
+      env:
+        CI: true
