--- a/.github/workflows/CiPipline.yml
+++ b/.github/workflows/CiPipline.yml
@@ -64,7 +64,9 @@ jobs:
         status: success
         fields: repo,commit,author,commit_message,action,eventName,ref,workflow,job,took
         author_name: GitHub Actions
-        slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}  # Required for accessing GitHub API
+        channel: '#your-channel'  # Replace with your Slack channel name
+        slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}  # This is how you should reference your secret
       env:
         CI: true
 
@@ -75,6 +77,8 @@ jobs:
         status: failure
         fields: repo,commit,author,commit_message,action,eventName,ref,workflow,job,took
         author_name: GitHub Actions
-        slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}  # Required for accessing GitHub API
+        channel: '#your-channel'  # Replace with your Slack channel name
+        slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}  # Ensure correct referencing
       env:
         CI: true
