update dabatase link

--- a/intershipJenkins.Api/appsettings.json
+++ b/intershipJenkins.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "intershipJenkinsDataBase": {
-    "ConnectionString": "mongodb+srv://ramibelhadjsalam:R3zqrPBmtjezHcVF@cluster0.rhsjf0l.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0",
+    "ConnectionString": "mongodb+srv://ramibelhadjsalam:u5SqYkjtIn4jQyZY@cluster0.rhsjf0l.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0",
     "DatabaseName": "intership_jenkins"
   },
   "Logging": {
