--- a/.github/workflows/CiPipline.yml
+++ b/.github/workflows/CiPipline.yml
@@ -42,13 +42,16 @@ jobs:
       run: |
         sed -i "s|ramibhs/jenkins:.*|ramibhs/intership:${{ github.sha }}|g" k8s/deployment.yaml
 
-    - name: Commit and push updated deployment.yaml
+    - name: Update image tag in deploy.yaml
       run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add k8s/deployment.yaml
-        git commit -m "Update deployment image to ramibhs/intership:${{ github.sha }}"
-        git push
+          sed -i 's|image: myrepo/myapp:.*|image: myrepo/myapp:${{ github.sha }}|' deploy.yaml
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add deploy.yaml
+          git commit -m "Update deployment image to myrepo/myapp:${{ github.sha }}"
+          git remote set-url origin https://${{ secrets.TOKEN }}@github.com/${{ github.repository }}.git
+          git push origin main
+      shell: bash
 
     - name: Apply Kubernetes deployment
       env:
