--- a/.github/workflows/CiPipline.yml
+++ b/.github/workflows/CiPipline.yml
@@ -38,16 +38,12 @@ jobs:
     - name: Push Docker image to Docker Hub
       run: docker push ramibhs/intership:${{ github.sha }}
 
-    - name: Update Kubernetes deployment YAML
-      run: |
-        sed -i "s|ramibhs/jenkins:.*|ramibhs/intership:${{ github.sha }}|g" k8s/deployment.yaml
-
     - name: Update image tag in deploy.yaml
       run: |
-          sed -i 's|image: myrepo/myapp:.*|image: myrepo/myapp:${{ github.sha }}|' deploy.yaml
+          sed -i 's|image: myrepo/myapp:.*|image: myrepo/myapp:${{ github.sha }}|' k8s/deployment.yaml
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add deploy.yaml
+          git add .
           git commit -m "Update deployment image to myrepo/myapp:${{ github.sha }}"
           git remote set-url origin https://${{ secrets.TOKEN }}@github.com/${{ github.repository }}.git
           git push origin main
