--- a/.github/workflows/CiPipline.yml
+++ b/.github/workflows/CiPipline.yml
@@ -43,7 +43,7 @@ jobs:
           sed -i 's|image: myrepo/myapp:.*|image: myrepo/myapp:${{ github.sha }}|' k8s/deployment.yaml
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add .
+          git add k8s/deployment.yaml
           git commit -m "Update deployment image to myrepo/myapp:${{ github.sha }}"
           git remote set-url origin https://${{ secrets.TOKEN }}@github.com/${{ github.repository }}.git
           git push origin main
