--- a/.github/workflows/CiPipline.yml
+++ b/.github/workflows/CiPipline.yml
@@ -37,7 +37,10 @@ jobs:
 
     - name: Push Docker image to Docker Hub
       run: docker push ramibhs/intership:${{ github.sha }}
-
+      
+    - name: Display deploy.yaml before modification
+      run: cat k8s/deployment.yaml
+      
     - name: Update image tag in deploy.yaml
       run: |
           sed -i 's|image: myrepo/myapp:.*|image: myrepo/myapp:${{ github.sha }}|' k8s/deployment.yaml
@@ -48,6 +51,8 @@ jobs:
           git remote set-url origin https://${{ secrets.TOKEN }}@github.com/${{ github.repository }}.git
           git push origin main
       shell: bash
+    - name: Display deploy.yaml after modification
+      run: cat k8s/deployment.yaml
 
     - name: Apply Kubernetes deployment
       env:
