--- a/.github/workflows/CiPipline.yml
+++ b/.github/workflows/CiPipline.yml
@@ -44,6 +44,8 @@ jobs:
     - name: Update image tag in deploy.yaml
       run: |
           sed -i 's|image: myrepo/myapp:.*|image: myrepo/myapp:${{ github.sha }}|' k8s/deployment.yaml
+          echo "Modified deploy.yaml:"
+          cat k8s/deployment.yaml
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add k8s/deployment.yaml
