--- a/.github/workflows/CiPipline.yml
+++ b/.github/workflows/CiPipline.yml
@@ -41,18 +41,18 @@ jobs:
     - name: Display deploy.yaml before modification
       run: cat k8s/deployment.yaml
       
-    - name: Update image tag in deploy.yaml
-      run: |
-          sed -i 's|image: .*/.*/jenkins:.*|image: myrepo/myapp:${{ github.sha }}|' k8s/deployment.yaml
-          echo "Modified deploy.yaml:"
-          cat k8s/deployment.yaml
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add k8s/deployment.yaml
-          git commit -m "Update deployment image to myrepo/myapp:${{ github.sha }}"
-          git remote set-url origin https://${{ secrets.TOKEN }}@github.com/${{ github.repository }}.git
-          git push origin main
-      shell: bash
+    - name: Update image tag in deployment.yaml
+      uses: OpsVerseIO/image-updater-action@0.1.0
+      with:
+        valueFile: 'k8s/deployment.yaml'
+        propertyPath: 'spec.template.spec.containers[0].image'
+        value: ramibhs/jenkins:${{ github.sha }}
+        commitChange: true
+        branch: master
+        targetBranch: master
+        createPR: false
+        message: 'Update deployment image to ramibhs/jenkins:${{ github.sha }}'
+        
     - name: Display deploy.yaml after modification
       run: cat k8s/deployment.yaml
 
