--- a/.github/workflows/CiPipline.yml
+++ b/.github/workflows/CiPipline.yml
@@ -47,7 +47,7 @@ jobs:
         valueFile: 'k8s/deployment.yaml'
         propertyPath: 'spec.template.spec.containers[0].image'
         value: ramibhs/jenkins:${{ github.sha }}
-        commitChange: true
+        commitChange: false
         branch: master
         targetBranch: master
         createPR: false
