--- a/.github/workflows/CiPipline.yml
+++ b/.github/workflows/CiPipline.yml
@@ -64,28 +64,27 @@ jobs:
         echo "${KUBECONFIG}" | base64 --decode > $HOME/.kube/config
         kubectl apply -f k8s/deployment.yaml -n myapp
         
-    - name: Notify Slack on success
-      if: success()
-      uses: 8398a7/action-slack@v3
-      with:
-        status: success
-        fields: repo,commit,author,commit_message,action,eventName,ref,workflow,job,took
-        author_name: GitHub Actions
-        github_token: ${{ secrets.TOKEN }}  # Required for accessing GitHub API
-        channel: '#general'  # Replace with your Slack channel name
-        slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}  # This is how you should reference your secret
-      env:
-        CI: true
+  send-slack-notification:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Notify Slack on failure
-      if: failure()
-      uses: 8398a7/action-slack@v3
-      with:
-        status: failure
-        fields: repo,commit,author,commit_message,action,eventName,ref,workflow,job,took
-        author_name: GitHub Actions
-        github_token: ${{ secrets.TOKEN }}  # Required for accessing GitHub API
-        channel: '#general'  # Replace with your Slack channel name
-        slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}  # Ensure correct referencing
-      env:
-        CI: true
+      - name: Send notification to Slack via webhook
+        uses: slackapi/slack-github-action@v1.26.0
+        with:
+          payload: |
+                  {
+                    "text": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}",
+                    "blocks": [
+                      {
+                        "type": "section",
+                        "text": {
+                          "type": "mrkdwn",
+                          "text": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+                        }
+                      }
+                    ]
+                  }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
